--- a/Project2.html
+++ b/Project2.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Landing page</title>
-        <meta charset="utf-8">
-        <meta name="Landing website" content="This is landing website">
-        <link rel="stylesheet" href="Project2.css">
-    </head>
-    <body>
-        <section>
-            <div id="section-id">
-                <h1>&nbsp; &nbsp; &nbsp; This is &nbsp; &nbsp; &nbsp;<br>Coding Website</h1>
-                <p>&nbsp;  This is a coding website you can code anything</p>
-                </p>
-            </div>
-        </section>
 
-        
-        <fotter id="fotter-data">
-            <a>Python</a>
-            <a>Java</a>
-            <a>Ruby</a>
-        </fotter>
-        
-    </body>
+<head>
+    <title>Landing page</title>
+    <meta charset="utf-8">
+    <meta name="Landing website" content="This is landing website">
+    <link rel="stylesheet" href="Project2.css">
+</head>
+
+<body>
+    <section>
+        <div id="section-id">
+            <h1>&nbsp; &nbsp; &nbsp; This is &nbsp; &nbsp; &nbsp;<br>Coding Website</h1>
+            <p>&nbsp; This is a coding website you can code anything</p>
+            </p>
+        </div>
+    </section>
+
+    <div id="login">
+        <form>
+            <input type="text" placeholder="Enter Your name">
+            <input type="password" placeholder="Enter password">
+        </form>
+    </div>
+
+    <fotter id="fotter-data">
+        <a>Python</a>
+        <a>Java</a>
+        <a>Ruby</a>
+    </fotter>
+
+</body>
+
 </html>
